@@ -2,6 +2,7 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
+- Fix: warning generated by pel-add-hook-for was invalidly referring to lispy.
 - Fix: The PEL key bindings for iedit-mode described in PEL documentation were not
   activated (such as ~M-C~ for upper-casing all instances).  This is now fixed.
 - Fix: **pel-replace-regexp** and **pel-query-replace-regexp** commands:
